
Description
===========

In brackets names of people, who told about error/problem or helped in fixing
or inspired me to make it.

[!] Important change
[+] New functionality
[*] Changes in existing functionality
[-] Fixed error

ChangeLog
=========
    
2009???? - 1.25.91

[+] * Documented most commands in man page.
[+] * Much improved Czech translation.
    
20090730 - 1.25.90

[-] * Fixed getting firmware revision on AT phones (bug #951).
[+] * Added support for home/work mobile number (bug #952).
[-] * Fixed handling of error response for security status in AT.
[-] * Fixed segfault on systems with very low memory limits.
[!] * Development now goes on in Git repository, please check README.
[!] * 6510 driver now dynamically allocates memory for file caches, what
      reduces Gammu memory usage by 800 MiB.
[-] * Added testcases for AT+CNMI replies.
[-] * Fixed range parsing in AT engine.
[+] * Added reconnect support in PostgreSQL driver in SMSD.
[!] * Gammu debug level no longer can be controlled separately in SMSD.
[-] * Fix loop when Nokia phone does not allow to access files (bug #954).
    
20090709 - 1.25.0

[-] * Retry on timeout of usb transfer (bug #940).
[-] * Disable AT OBEX for Motorola PEBL U6 (bug #939).
[-] * Disable AT OBEX for Samsung J700 (bug #948).
[-] * Empty memory entry has length 0 (bug #947).
[-] * Handle some more fields from Nokia phonebook (bug #946), thanks to Will Sowerbutts.
    
20090624 - 1.24.92

[-] * Fix distutils build (bug #916).
[-] * Detect when phone does not support ATE1 (bug #918).
[-] * Do not use OBEX on Motorola L7 (bug #912).
[-] * Reinclude full SMS text in comments in backup (bug #905).
[-] * Disable AT OBEX for Samsung J750 and J700 (bug #856).
[-] * Avoid shadowing C++ bool definition (bug #920).
[-] * Do not disable CLIP for all SE phones.
[-] * Add ID for Nokia 1209.
[-] * Catch busy error from Nokia phones (bug #932, thanks to Walter Doekes).
    
20090527 - 1.24.91

[-] * Fix code problems caught by GCC 4.5.